Do not unregister MessagePorts on deallocation if it has been disentangled https://bugs.webkit.org/show_bug.cgi?id=184285 <rdar://problem/39256714>

Patch by Tadeu Zagallo <tzagallo@apple.com> on 2018-04-17
Reviewed by Darin Adler.

Source/WebCore:

Test: workers/message-port-gc.html

* dom/MessagePort.cpp:
(WebCore::MessagePort::deref const):

LayoutTests:

Original test provided as part of the bug report by Yann Cabon <ycabon@esri.com>

* workers/message-port-gc-expected.txt: Added.
* workers/message-port-gc.html: Added.
* workers/message-port-gc.js: Added.

Canonical link: https://commits.webkit.org/200221@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230735 268f45cc-cd09-0410-ab3c-d52691b4dbfc